# AutoClassed

./: .gitignore  README.md  agent.py  agent_item.py  agent_modular.py  full_example.ipynb  fuzzy.py  gw_config.json  initialize_assistant.ipynb  lookup.py  main.py  modular_lookup.py  pyproject.toml  requirements.txt  server.py  spend_analysis.ipynb  spend_intake2.session.sql  tests.py  unnamed.patch  utils.py  working.py
.streamlit/: pages.toml  secrets.toml
Archive/: fix_df.ipynb  fuzzy.py  import_libs_and_df.ipynb  initialize_assistant.ipynb  initialize_openai.ipynb
cache/: cache_db_0.11.db.wal
data/: sample.csv  sample_cleaned.csv
misc/: create_db.py  item descript table.py  update_table.py
other_pages/: profile.py
utils/: add_update_field.py  create_table.py  update_table.py
